[gd_scene load_steps=16 format=3 uid="uid://c8b8b7e6dn7qt"]

[ext_resource type="Texture2D" uid="uid://bj4nsxrs0sbri" path="res://assets/Sunny-land-files/Graphical Assets/sprites/eagle/eagle-attack-1.png" id="1_hynol"]
[ext_resource type="Script" path="res://Eagle.gd" id="1_mw8l5"]
[ext_resource type="Texture2D" uid="uid://p6uf1ibf13f7" path="res://assets/Sunny-land-files/Graphical Assets/sprites/eagle/eagle-attack-2.png" id="2_bshds"]
[ext_resource type="Texture2D" uid="uid://ifakasty16tf" path="res://assets/Sunny-land-files/Graphical Assets/sprites/eagle/eagle-attack-3.png" id="3_bdgn5"]
[ext_resource type="Texture2D" uid="uid://bp535tesodyms" path="res://assets/Sunny-land-files/Graphical Assets/sprites/eagle/eagle-attack-4.png" id="4_2m6ge"]
[ext_resource type="Texture2D" uid="uid://cdn8hbnt6ptcp" path="res://assets/Sunny-land-files/Graphical Assets/sprites/enemy-death/enemy-death-1.png" id="6_qvtpe"]
[ext_resource type="Texture2D" uid="uid://c2bn2kfii3yjj" path="res://assets/Sunny-land-files/Graphical Assets/sprites/enemy-death/enemy-death-2.png" id="7_26knn"]
[ext_resource type="Texture2D" uid="uid://o6jl5k6fe7uc" path="res://assets/Sunny-land-files/Graphical Assets/sprites/enemy-death/enemy-death-3.png" id="8_h2i7m"]
[ext_resource type="Texture2D" uid="uid://pxqkyrbv1n74" path="res://assets/Sunny-land-files/Graphical Assets/sprites/enemy-death/enemy-death-4.png" id="9_d161p"]
[ext_resource type="Texture2D" uid="uid://bdd2fium4itj7" path="res://assets/Sunny-land-files/Graphical Assets/sprites/enemy-death/enemy-death-5.png" id="10_xajge"]
[ext_resource type="Texture2D" uid="uid://xhx2ccwjnrh2" path="res://assets/Sunny-land-files/Graphical Assets/sprites/enemy-death/enemy-death-6.png" id="11_184td"]

[sub_resource type="CircleShape2D" id="CircleShape2D_j5u26"]

[sub_resource type="SpriteFrames" id="SpriteFrames_v0t7a"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": ExtResource("1_hynol")
}, {
"duration": 1.0,
"texture": ExtResource("2_bshds")
}, {
"duration": 1.0,
"texture": ExtResource("3_bdgn5")
}, {
"duration": 1.0,
"texture": ExtResource("4_2m6ge")
}],
"loop": true,
"name": &"Attack",
"speed": 12.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("6_qvtpe")
}, {
"duration": 1.0,
"texture": ExtResource("7_26knn")
}, {
"duration": 1.0,
"texture": ExtResource("8_h2i7m")
}, {
"duration": 1.0,
"texture": ExtResource("9_d161p")
}, {
"duration": 1.0,
"texture": ExtResource("10_xajge")
}, {
"duration": 1.0,
"texture": ExtResource("11_184td")
}],
"loop": false,
"name": &"Death",
"speed": 5.0
}]

[sub_resource type="CircleShape2D" id="CircleShape2D_440qu"]
radius = 20.0693

[sub_resource type="RectangleShape2D" id="RectangleShape2D_2v7pw"]
size = Vector2(20, 30)

[node name="Eagle" type="CharacterBody2D"]
script = ExtResource("1_mw8l5")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
scale = Vector2(2, 2)
shape = SubResource("CircleShape2D_j5u26")
disabled = true

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
position = Vector2(5, -7)
scale = Vector2(1.3, 1.3)
sprite_frames = SubResource("SpriteFrames_v0t7a")
animation = &"Death"

[node name="DetectPlayer" type="Area2D" parent="."]
collision_layer = 3
collision_mask = 3

[node name="CollisionShape2D" type="CollisionShape2D" parent="DetectPlayer"]
light_mask = 3
visibility_layer = 3
position = Vector2(0, 2)
scale = Vector2(1.2, 1.2)
shape = SubResource("CircleShape2D_440qu")

[node name="AttackTimer" type="Timer" parent="."]
wait_time = 5.0
one_shot = true

[node name="DetectPlayerAtk" type="Area2D" parent="."]

[node name="DeathCollision" type="CollisionShape2D" parent="DetectPlayerAtk"]
position = Vector2(0, -13)
scale = Vector2(1, 0.2)
shape = SubResource("RectangleShape2D_2v7pw")

[connection signal="body_entered" from="DetectPlayer" to="." method="_on_detect_player_body_entered"]
[connection signal="timeout" from="AttackTimer" to="." method="_on_attack_timer_timeout"]
[connection signal="body_entered" from="DetectPlayerAtk" to="." method="_on_detect_player_atk_body_entered"]
